settings: Fix "Notifications stream" list scrolling.
The list needs to be set to use perfectScrollbar so that it can
scroll due to the fact that it resides within another instance of
perfectScrollbar.

Fixes: #6351.

--- a/static/styles/settings.css
+++ b/static/styles/settings.css
@@ -1064,6 +1064,7 @@ input[type=checkbox].inline-block {
 }
 
 #id_realm_notifications_stream .dropdown-list-body {
+    position: relative;
     height: auto;
     max-height: 200px;
     overflow-y: auto;
